  make space in the repository and restart Obnam, it will continue from
  the previous checkpoint.
* The convert5to6 black box test now works even if run by other people
  than liw.
* "obnam backup" now uses a single SFTP connection to the backup repository,
  rather than opening a new one after each checkpoint generation. Thanks to
  weinzwang for reporting the problem.

Version 0.27, released 2012-04-30; a BETA release
-------------------------------------------------

* The repository format has again changed in an incompatible manner,
  so you will need to re-backup everything again. Alternatively, you can
  try the new `convert5to6` subcommand. See the manual page for details.
  Make sure you have a copy of the repository before converting, the
  code is new and may be buggy.
* New option `--small-files-in-btree` enables Obnam to store the contents
  of small files in the per-client B-tree. This is not the default, at
  least yet, since it's impact on real life performance is unknown, but
  it should make things go a bit faster for high latency repository
  connections.
* Some SFTP related speed optimizations.
* Data filtering is now strictly stable and priority-ordered, ensuring that
  compression always happens before encryption etc.
* Repository metadata is never filtered, so that we can be sure that
  in future if when we add backwards-compatibility we can detect the format
  without worrying about any other filtering which might occur.
* Forcing of locks is now unconditional and across the entire repository.
* Uses the larch 0.30 read-only mode to fix a bug where opening a B-tree
  rolls back changes someone else is making, even if we only use the tree
  to read stuff from.
* "obnam backup" will now exit with a non-zero exit code if there were
  any errors during a backup, and the problematic files were skipped.
  Thanks, Peter Palfrader, for reporting the bug.
* "obnam forget" is now a bit faster.
* Hash collisions for filenames are now handled.
